--- a/src/styles/ArticleList.css
+++ b/src/styles/ArticleList.css
@@ -70,16 +70,34 @@
   }
 }
 
-.loading{
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+/* Loader styles remain unchanged */
+.loading {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.loading h1{
-    font-size: 40px;
-    font-weight: 300;
+.loading h1 {
+  font-size: 40px;
+  font-weight: 300;
 }
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #25b09b;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {to{transform: rotate(1turn)}}
+
 @media screen and (max-width: 768px) {
   .title {
     font-size: 28px;
